--- a/paper/egbib.bib
+++ b/paper/egbib.bib
@@ -1,44 +1,63 @@
-
-@misc{Authors14,
- author = {Authors},
- title = {The frobnicatable foo filter},
- note = {Face and Gesture  submission ID 324. Supplied as additional material {\tt fg324.pdf}},
- year = 2014
+@article{pinto2016curious,
+	title={The Curious Robot: Learning Visual Representations via Physical Interactions},
+	author={Pinto, Lerrel and Gandhi, Dhiraj and Han, Yuanfeng and Park, Yong-Lae and Gupta, Abhinav},
+	journal={arXiv preprint arXiv:1604.01360},
+	year={2016}
 }
 
-@misc{Authors14b,
- author = {Authors},
- title = {Frobnication tutorial},
- note = {Supplied as additional material {\tt tr.pdf}},
- year = 2014
+@article{saxena2007depth,
+	title={Depth Estimation Using Monocular and Stereo Cues.},
+	author={Saxena, Ashutosh and Schulte, Jamie and Ng, Andrew Y},
+	booktitle={IJCAI},
+	volume={7},
+	year={2007}
 }
 
-@article{Alpher02,
-author = {A. Alpher},
-title = {Frobnication},
-journal = {Journal of Foo},
-volume = 12, 
-number = 1, 
-pages = {234--778}, 
-year = 2002
+@article{fouhey2013data,
+	title={Data-driven 3D primitives for single image understanding},
+	author={Fouhey, David F and Gupta, Abhinav and Hebert, Martial},
+	booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+	pages={3392--3399},
+	year={2013}
 }
 
-@article{Alpher03,
-author = {A. Alpher and  J.~P.~N. Fotheringham-Smythe},
-title = {Frobnication revisited},
-journal = {Journal of Foo},
-volume = 13, 
-number = 1, 
-pages = {234--778}, 
-year = 2003
+@article{silberman2012indoor,
+	title={Indoor segmentation and support inference from RGBD images},
+	author={Silberman, Nathan and Hoiem, Derek and Kohli, Pushmeet and Fergus, Rob},
+	booktitle={European Conference on Computer Vision},
+	pages={746--760},
+	year={2012},
+	organization={Springer}
+}
+@article{kyto2011method,
+	title={Method for measuring stereo camera depth accuracy based on stereoscopic vision},
+	author={Kyt{\"o}, Mikko and Nuutinen, Mikko and Oittinen, Pirkko},
+	booktitle={IS\&T/SPIE Electronic Imaging},
+	pages={78640I--78640I},
+	year={2011},
+	organization={International Society for Optics and Photonics}
 }
 
-@article{Alpher04,
-author = {A. Alpher and J.~P.~N. Fotheringham-Smythe and G. Gamow},
-title = {Can a machine frobnicate?},
-journal = {Journal of Foo},
-volume = 14, 
-number = 1, 
-pages = {234--778}, 
-year = 2004
+@article{jones2011head,
+	title={Head-mounted photometric stereo for performance capture},
+	author={Jones, Andrew and Fyffe, Graham and Yu, Xueming and Ma, Wan-Chun and Busch, Jay and Ichikari, Ryosuke and Bolas, Mark and Debevec, Paul},
+	booktitle={Visual Media Production (CVMP), 2011 Conference for},
+	pages={158--164},
+	year={2011},
+	organization={IEEE}
+}
+@article{diebel2004simultaneous,
+	title={Simultaneous localization and mapping with active stereo vision},
+	author={Diebel, James and Reutersward, K and Thrun, Sebastian and Davis, James and Gupta, Rakesh},
+	booktitle={Intelligent Robots and Systems, 2004.(IROS 2004). Proceedings. 2004 IEEE/RSJ International Conference on},
+	volume={4},
+	pages={3436--3443},
+	year={2004},
+	organization={IEEE}
+}
+@misc{ROSabout,
+	title = {Robot Operating System},
+	month = "Dec",
+	year = "2016",
+	note = "http://www.ros.org/about-ros/"}
 }
