--- a/paper/egpaper_final.tex
+++ b/paper/egpaper_final.tex
@@ -6,6 +6,8 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{caption}
+\usepackage{subcaption}
 
 % Include other packages here, before hyperref.
 
@@ -49,407 +51,110 @@ ECE, UC, Davis\\
 
 %%%%%%%%% ABSTRACT
 \begin{abstract}
-   The ABSTRACT is to be in fully-justified italicized text, at the top
-   of the left-hand column, below the author and affiliation
-   information. Use the word ``Abstract'' as the title, in 12-point
-   Times, boldface type, centered relative to the column, initially
-   capitalized. The abstract is to be in 10-point, single-spaced type.
-   Leave two blank lines after the Abstract, then begin the main text.
-   Look at previous CVPR abstracts to get a feel for style and length.
+Depth information are crucial in areas such as obstacle avoidance, autonomous mapping, route planning and navigation. Among various depth sensors that are currently available in the market, Lidars are popularly used in measuring depth information to surrounding environment because of its accuracy, precision and flexibility. However, Lidars can be very costly. In this project, we attempted to use convolutional neural network to train a two-eye camera with depth information detected from a 2D Lidar to see if the camera would learn how to extract depth information from images it captures so it could be a potential substitution of the expensive lidar. As in our knowledge, we are the first attempt that uses two images of a two-eye camera(generates two images at a time) as input to train a network to simulate lidar behavior so far. 
 \end{abstract}
 
 %%%%%%%%% BODY TEXT
 \section{Introduction}
 
-Please follow the steps outlined below when submitting your manuscript to
-the IEEE Computer Society Press.  This style guide now has several
-important modifications (for example, you are no longer warned against the
-use of sticky tape to attach your artwork to the paper), so all authors
-should read this new version.
-
+Depth information are crucial in areas such as obstacle avoidance, autonomous mapping, route planning and navigation. Among various depth sensors that are currently available in the market, Lidars are popularly used in measuring depth information to surrounding environment because of its accuracy, precision and flexibility. However, Lidars can be very costly. As from the papers we read\cite{kyto2011method},\cite{jones2011head}, \cite{diebel2004simultaneous} we learned that stereo cameras are able to detect depth information and they are relatively cheap compared to most of depth sensors, but previous methods like triangulation are not very effective in terms of accuracy and computational cost. Therefore, we propose this approach that trains a deep neural network on two cameras to obtain accurate depth values from targeted area just like what the precise sensors do. For this project, we run a ZED two-eye camera and an 2D lidar on a robotic system simultaneously in order to obtain images and lidar measured points. Then we use measured depth as ground truth, images as inputs to train a deep neutral network so that the images can be transformed to lidar points. We used ROS(Robotic Operating System) to monitor and control the camera and lidar and all the data were manually collected and stored by the team. 34K data were used as training data which was fed into the network and 1.5K data were used to perform validation. The network was constructed and operated in Tensorflow. The idea from this project may be extended to use some latent information obtained from sensor A to learn obvious and useful information from sensor B. Images contain much of such latent features of objects which can be extracted by DNN, just like human eyes do.
 %-------------------------------------------------------------------------
-\subsection{Language}
+\section{Related work}
+Our work mainly focus on how to design neural network to extract useful visual representations of depth information from two pictures and calculate the regression value of  2-D depth in front of the robots.
+\subsection{Traditional methods to calculate depth from two images}
+In paper \cite{saxena2007depth}, they use images from two cameras to triangulate and estimate distances relative to robot and they also use monocular visual cues in the pictures to do the estimation. The conclusion suggests that the depth information indeed hide in two stereo camera pictures. Therefore, we can theoretically estimate the depth information from a stereo camera pair.  
 
-All manuscripts must be in English.
+\subsection{Supervised learning}
 
-\subsection{Dual submission}
-
-By submitting a manuscript to CVPR, the authors guarantee that it has 
-not been previously published or accepted for publication in substantially 
-similar form in an archival peer-reviewed forum. Furthermore, no paper which 
-contains significant overlap with the contributions of this paper is neither 
-under review at the moment of submission nor will be submitted during the 
-CVPR 2014 review period to {\bf any of the following}: another conference,
-a workshop, or a journal. The authors also attest that they did not submit
-substantially similar submissions to CVPR 2014. {\bf Violation of any of
-these conditions will lead to rejection.} If you are not sure about the
-extent of overlap, you may upload a copy of the paper in question as
-supplementary material. Note that a Technical Report (departmental, 
-arXiv.org, etc.) that is put up without any form of direct peer-review is 
-{\bf NOT} considered a publication. Likewise, mention of the work under 
-review in a presentation is {\bf NOT} considered a violation.
-
-If there are papers that may appear to the reviewers
-to violate this condition, then it is your responsibility to: (1)~cite
-these papers (preserving anonymity as described in Section 1.6 below),
-(2)~argue in the body of your paper why your CVPR paper is non-trivially
-different from these concurrent submissions, and (3)~include anonymized
-versions of those papers in the supplemental material.
-
-\subsection{Paper length}
-CVPR papers may be between 6 pages and 8 pages, with a \$100 per page added
-fee.  Overlength papers will simply not be reviewed.  This includes papers
-where the margins and formatting are deemed to have been significantly
-altered from those laid down by this style guide.  Note that this
-\LaTeX\ guide already sets figure captions and references in a smaller font.
-The reason such papers will not be reviewed is that there is no provision for
-supervised revisions of manuscripts.  The reviewing process cannot determine
-the suitability of the paper for presentation in eight pages if it is
-reviewed in eleven.  If you submit 8 for review expect to pay the added page
-charges for them. 
-
-%-------------------------------------------------------------------------
-\subsection{The ruler}
-The \LaTeX\ style defines a printed ruler which should be present in the
-version submitted for review.  The ruler is provided in order that
-reviewers may comment on particular lines in the paper without
-circumlocution.  If you are preparing a document using a non-\LaTeX\
-document preparation system, please arrange for an equivalent ruler to
-appear on the final output pages.  The presence or absence of the ruler
-should not change the appearance of any other content on the page.  The
-camera ready copy should not contain a ruler. (\LaTeX\ users may uncomment
-the \verb'\cvprfinalcopy' command in the document preamble.)  Reviewers:
-note that the ruler measurements do not align well with lines in the paper
---- this turns out to be very difficult to do well when the paper contains
-many figures and equations, and, when done, looks ugly.  Just use fractional
-references (e.g.\ this line is $095.5$), although in most cases one would
-expect that the approximate location will be adequate.
-
-\subsection{Mathematics}
-
-Please number all of your sections and displayed equations.  It is
-important for readers to be able to refer to any particular equation.  Just
-because you didn't refer to it in the text doesn't mean some future reader
-might not need to refer to it.  It is cumbersome to have to use
-circumlocutions like ``the equation second from the top of page 3 column
-1''.  (Note that the ruler will not be present in the final copy, so is not
-an alternative to equation numbers).  All authors will benefit from reading
-Mermin's description of how to write mathematics:
-\url{http://www.pamitc.org/documents/mermin.pdf}.
-
-
-\subsection{Blind review}
-
-Many authors misunderstand the concept of anonymizing for blind
-review.  Blind review does not mean that one must remove
-citations to one's own work---in fact it is often impossible to
-review a paper unless the previous citations are known and
-available.
-
-Blind review means that you do not use the words ``my'' or ``our''
-when citing previous work.  That is all.  (But see below for
-techreports)
-
-Saying ``this builds on the work of Lucy Smith [1]'' does not say
-that you are Lucy Smith, it says that you are building on her
-work.  If you are Smith and Jones, do not say ``as we show in
-[7]'', say ``as Smith and Jones show in [7]'' and at the end of the
-paper, include reference 7 as you would any other cited work.
-
-An example of a bad paper just asking to be rejected:
-\begin{quote}
-\begin{center}
-    An analysis of the frobnicatable foo filter.
-\end{center}
-
-   In this paper we present a performance analysis of our
-   previous paper [1], and show it to be inferior to all
-   previously known methods.  Why the previous paper was
-   accepted without this analysis is beyond me.
-
-   [1] Removed for blind review
-\end{quote}
-
-
-An example of an acceptable paper:
-
-\begin{quote}
-\begin{center}
-     An analysis of the frobnicatable foo filter.
-\end{center}
-
-   In this paper we present a performance analysis of the
-   paper of Smith \etal [1], and show it to be inferior to
-   all previously known methods.  Why the previous paper
-   was accepted without this analysis is beyond me.
-
-   [1] Smith, L and Jones, C. ``The frobnicatable foo
-   filter, a fundamental contribution to human knowledge''.
-   Nature 381(12), 1-213.
-\end{quote}
-
-If you are making a submission to another conference at the same time,
-which covers similar or overlapping material, you may need to refer to that
-submission in order to explain the differences, just as you would if you
-had previously published related work.  In such cases, include the
-anonymized parallel submission~\cite{Authors14} as additional material and
-cite it as
-\begin{quote}
-[1] Authors. ``The frobnicatable foo filter'', F\&G 2014 Submission ID 324,
-Supplied as additional material {\tt fg324.pdf}.
-\end{quote}
-
-Finally, you may feel you need to tell the reader that more details can be
-found elsewhere, and refer them to a technical report.  For conference
-submissions, the paper must stand on its own, and not {\em require} the
-reviewer to go to a techreport for further details.  Thus, you may say in
-the body of the paper ``further details may be found
-in~\cite{Authors14b}''.  Then submit the techreport as additional material.
-Again, you may not assume the reviewers will read this material.
-
-Sometimes your paper is about a problem which you tested using a tool which
-is widely known to be restricted to a single institution.  For example,
-let's say it's 1969, you have solved a key problem on the Apollo lander,
-and you believe that the CVPR70 audience would like to hear about your
-solution.  The work is a development of your celebrated 1968 paper entitled
-``Zero-g frobnication: How being the only people in the world with access to
-the Apollo lander source code makes us a wow at parties'', by Zeus \etal.
-
-You can handle this paper like any other.  Don't write ``We show how to
-improve our previous work [Anonymous, 1968].  This time we tested the
-algorithm on a lunar lander [name of lander removed for blind review]''.
-That would be silly, and would immediately identify the authors. Instead
-write the following:
-\begin{quotation}
-\noindent
-   We describe a system for zero-g frobnication.  This
-   system is new because it handles the following cases:
-   A, B.  Previous systems [Zeus et al. 1968] didn't
-   handle case B properly.  Ours handles it by including
-   a foo term in the bar integral.
-
-   ...
-
-   The proposed system was integrated with the Apollo
-   lunar lander, and went all the way to the moon, don't
-   you know.  It displayed the following behaviours
-   which show how well we solved cases A and B: ...
-\end{quotation}
-As you can see, the above text follows standard scientific convention,
-reads better than the first version, and does not explicitly name you as
-the authors.  A reviewer might think it likely that the new paper was
-written by Zeus \etal, but cannot make any decision based on that guess.
-He or she would have to be sure that no other authors could have been
-contracted to solve problem B.
-
-FAQ: Are acknowledgements OK?  No.  Leave them for the final copy.
-
-
+In paper \cite{pinto2016curious}, the author design a Siamese neural network to predict pushing angle and force exerting point on a object by inputting two pictures: object before pushing, object after pushing. Here they use 4 layers CNN and two connected fully connected network to predict 6 output regression values. In addition, they also use one row CNN to calculate the  predicted regression value of material hardness features of objects (slope and intercept of supporting force line). In this paper, the author mainly use the updated weights to do image recognition, but not testify the accuracy of their regression prediction. In paper [data-driven], they use NYU Depth v2 [indoor] dataset to train the DNN to extract an accurate dense 3D interpretation based on one single picture. They show the good result of dense information extracted from pictures, but the labels of dataset is also from Microsoft Kinect stereo camera, which are also calculated from classic methods and not as accurate as 2-D lidar. In our method, we use more accurate depth labels obtained by Lidar directly and expect to achieve better results. 
+\section{Approach}
+To construct our own datasets, we install a Zed camera and 2D Lidar on a small robot vehicle. The robots can be controlled to move in a complex depth changing environment. While robot’s moving, we record the input data: images captured by Zed camera and training labels: 2-D Lidar depth information.
+\subsection{Robot platform}
+To construct our own datasets, we install a Zed camera and 2D Lidar on a small robot vehicle. The robots can be controlled to move in a complex depth changing environment. While robot’s moving, we record the input data: images captured by Zed camera and training labels: 2-D Lidar depth information.
+\subsubsection{Cameras}
+We use Zed camera to capture environmental information in front of it, which can capture almost 10 pictures in one second. \textbf{Here we only use Zed camera to collect pictures in front of it.} As we talked in last chapter, the depth information lies in the two images they captured. The picture size taken by camera is 376*672*3 and the lidar we use is 2D, so we assume that the useful depth information at the height of 2D lidar sensing lies in the vertical middle one-third area of whole images taken by cameras. Therefore, we sliced the images to 128*672*3 as raw image inputs. The Zed camera is shown in Figure\ref{zed_camera}
 \begin{figure}[t]
-\begin{center}
-\fbox{\rule{0pt}{2in} \rule{0.9\linewidth}{0pt}}
-   %\includegraphics[width=0.8\linewidth]{egfigure.eps}
-\end{center}
-   \caption{Example of caption.  It is set in Roman so that mathematics
-   (always set in Roman: $B \sin A = A \sin B$) may be included without an
-   ugly clash.}
-\label{fig:long}
-\label{fig:onecol}
+	\begin{center}
+		%\fbox{\rule{0pt}{2in} \rule{0.9\linewidth}{0pt}}
+		\includegraphics[width=0.8\linewidth]{pictures/zedcamera.png}
+	\end{center}
+	\caption{Zed Cameras}
+	\label{zed_camera}
 \end{figure}
 
-\subsection{Miscellaneous}
 
-\noindent
-Compare the following:\\
-\begin{tabular}{ll}
- \verb'$conf_a$' &  $conf_a$ \\
- \verb'$\mathit{conf}_a$' & $\mathit{conf}_a$
-\end{tabular}\\
-See The \TeX book, p165.
+\subsubsection{Lidar}
+We use RPLIDAR, a 2D lidar to sense the depth information at its sensing height. 2-D Lidar can sense the depth information 360 degree of its around environment.The lidar is shown in Figure \ref{lidar}he sensing result is visualized in Figure\ref{lidar_sensing}.
 
-The space after \eg, meaning ``for example'', should not be a
-sentence-ending space. So \eg is correct, {\em e.g.} is not.  The provided
-\verb'\eg' macro takes care of this.
+\begin{figure}
+	\centering
+		\includegraphics[width=.3\linewidth]{pictures/lidar.jpg}
+		\caption{RPLIDAR 2D lidar}
+		\label{lidar}
 
-When citing a multi-author paper, you may save space by using ``et alia'',
-shortened to ``\etal'' (not ``{\em et.\ al.}'' as ``{\em et}'' is a complete word.)
-However, use it only when there are three or more authors.  Thus, the
-following is correct: ``
-   Frobnication has been trendy lately.
-   It was introduced by Alpher~\cite{Alpher02}, and subsequently developed by
-   Alpher and Fotheringham-Smythe~\cite{Alpher03}, and Alpher \etal~\cite{Alpher04}.''
+\end{figure}
+\begin{figure}
+		\centering
+		\includegraphics[width=.8\linewidth]{pictures/lidar_sensing.jpg}
+		\caption{Another figure}
+		\label{lidar_sensing}
+\end{figure}
 
-This is incorrect: ``... subsequently developed by Alpher \etal~\cite{Alpher03} ...''
-because reference~\cite{Alpher03} has just two authors.  If you use the
-\verb'\etal' macro provided, then you need not worry about double periods
-when used at the end of a sentence as in Alpher \etal.
-
-For this citation style, keep multiple citations in numerical (not
-chronological) order, so prefer \cite{Alpher03,Alpher02,Authors14} to
-\cite{Alpher02,Alpher03,Authors14}.
-
-
-\begin{figure*}
+As the span view of the zed camera is 120 degree, therefore we choose the 120 degree depth information in front of cameras as labels. The lidar can obtain almost 5 pieces of depth information in 360 degree. 
+%Mermin's description of how to write mathematics:
+%\url{http://www.pamitc.org/documents/mermin.pdf}.
+\subsubsection{ROS}
+In order to collect the pictures taken by Zed camera and depth information recorded by Lidar, we use Robot Operating System (ROS) system to pack all the pictures and depth information in the series of recording time. ROS is a flexible framework for writing robot software. It is a collection of tools, libraries, and conventions that aim to simplify the task of creating complex and robust robot behavior across a wide variety of robotic platforms\cite{ROSabout}. We construct a ros node for lidar to publish the depth information and construct a ros node for zed camera to publish two compressed images taken by the two cameras. At the same time, we constructed a subscriber to record all the information and pack them into ros bags. After data collection, we use ‘rosbag play’ to publish all the captured images and depth information in time series. Meanwhile, we subscribe the publishing and keep the record of all data. At last, we matches all the images and depth labels based on recording time.  In figure \ref{two_images}, they show the two sliced images captured by camera, while in figure \ref{lidar_visual}, it shows the lidar depth information. The red area means the depth data we choose as labels.
+\begin{figure}[t]
 \begin{center}
-\fbox{\rule{0pt}{2in} \rule{.9\linewidth}{0pt}}
+%\fbox{\rule{0pt}{2in} \rule{0.9\linewidth}{0pt}}
+\includegraphics[width=0.8\linewidth]{pictures/two_images.png}
 \end{center}
-   \caption{Example of a short caption, which should be centered.}
-\label{fig:short}
-\end{figure*}
+   \caption{Two images taken by Zed camera at an instant}
+\label{two_images}
+\end{figure}
 
-%------------------------------------------------------------------------
-\section{Formatting your paper}
+\begin{figure}[t]
+	\begin{center}
+		\includegraphics[width=0.8\linewidth]{pictures/lidar_visual.png}
+	\end{center}
+	\caption{Lidar Depth information}
+	\label{lidar_visual}
+\end{figure}
 
-All text must be in a two-column format. The total allowable width of the
-text area is $6\frac78$ inches (17.5 cm) wide by $8\frac78$ inches (22.54
-cm) high. Columns are to be $3\frac14$ inches (8.25 cm) wide, with a
-$\frac{5}{16}$ inch (0.8 cm) space between them. The main title (on the
-first page) should begin 1.0 inch (2.54 cm) from the top edge of the
-page. The second and following pages should begin 1.0 inch (2.54 cm) from
-the top edge. On all pages, the bottom margin should be 1-1/8 inches (2.86
-cm) from the bottom edge of the page for $8.5 \times 11$-inch paper; for A4
-paper, approximately 1-5/8 inches (4.13 cm) from the bottom edge of the
-page.
+\section{Network Architecture}
+Here we describe our network architecture for extract depth information from two images. The network architecture is showed in Figure X below. We tuned the size of images and convolutional filters during our experiments but keep the main structure same as this.
 
-%-------------------------------------------------------------------------
-\subsection{Margins and page numbering}
+\begin{figure}
+\centering
+   \caption{Our convolutional neural network architecture for lidar simulating}
+   \includegraphics[width=8cm]{pictures/network_architecture.png}
+\label{network}
+\end{figure}
 
-All printed material, including text, illustrations, and charts, must be kept
-within a print area 6-7/8 inches (17.5 cm) wide by 8-7/8 inches (22.54 cm)
-high.
-Page numbers should be in footer with page numbers, centered and .75
-inches from the bottom of the page and make it start at the correct page
-number rather than the 4321 in the example.  To do this fine the line (around
-line 23)  
-\begin{verbatim}
-%\ifcvprfinal\pagestyle{empty}\fi
-\setcounter{page}{4321}
-\end{verbatim}
-where the number 4321 is your assigned starting page.  
-
-Make sure the first page is numbered by commenting out the first page being
-empty on line 46
-\begin{verbatim}
-%\thispagestyle{empty}
-\end{verbatim}
+\textbf{Two stream input:} Our task needs information from both left and right images so the network has two input streams to deal with two images. Unlike siamese network, the upper stream and lower stream don’t share weights. In this way the convolutional neural network is allowed to process two image differently which make more sense since two images has different viewpoints. 
 
 
-%-------------------------------------------------------------------------
-\subsection{Type-style and fonts}
-
-Wherever Times is specified, Times Roman may also be used. If neither is
-available on your word processor, please use the font closest in
-appearance to Times to which you have access.
-
-MAIN TITLE. Center the title 1-3/8 inches (3.49 cm) from the top edge of
-the first page. The title should be in Times 14-point, boldface type.
-Capitalize the first letter of nouns, pronouns, verbs, adjectives, and
-adverbs; do not capitalize articles, coordinate conjunctions, or
-prepositions (unless the title begins with such a word). Leave two blank
-lines after the title.
-
-AUTHOR NAME(s) and AFFILIATION(s) are to be centered beneath the title
-and printed in Times 12-point, non-boldface type. This information is to
-be followed by two blank lines.
-
-The ABSTRACT and MAIN TEXT are to be in a two-column format.
-
-MAIN TEXT. Type main text in 10-point Times, single-spaced. Do NOT use
-double-spacing. All paragraphs should be indented 1 pica (approx. 1/6
-inch or 0.422 cm). Make sure your text is fully justified---that is,
-flush left and flush right. Please do not place any additional blank
-lines between paragraphs.
-
-Figure and table captions should be 9-point Roman type as in
-Figures~\ref{fig:onecol} and~\ref{fig:short}.  Short captions should be centred.
-
-\noindent Callouts should be 9-point Helvetica, non-boldface type.
-Initially capitalize only the first word of section titles and first-,
-second-, and third-order headings.
-
-FIRST-ORDER HEADINGS. (For example, {\large \bf 1. Introduction})
-should be Times 12-point boldface, initially capitalized, flush left,
-with one blank line before, and one blank line after.
-
-SECOND-ORDER HEADINGS. (For example, { \bf 1.1. Database elements})
-should be Times 11-point boldface, initially capitalized, flush left,
-with one blank line before, and one after. If you require a third-order
-heading (we discourage it), use 10-point Times, boldface, initially
-capitalized, flush left, preceded by one blank line, followed by a period
-and your text on the same line.
-
-%-------------------------------------------------------------------------
-\subsection{Footnotes}
-
-Please use footnotes\footnote {This is what a footnote looks like.  It
-often distracts the reader from the main flow of the argument.} sparingly.
-Indeed, try to avoid footnotes altogether and include necessary peripheral
-observations in
-the text (within parentheses, if you prefer, as in this sentence).  If you
-wish to use a footnote, place it at the bottom of the column on the page on
-which it is referenced. Use Times 8-point type, single-spaced.
+\textbf{Extract edges, features, objects and scene:} The convolutional layers are used for edge and feature extraction, these information may help the network to better predict the depth. If we use a deeper convolutional network architecture the higher level notion of object and scene can also be used by the network. We think that with the help of edge, feature, object and scene notion, we can better extract depth information from images than the traditional way.
 
 
-%-------------------------------------------------------------------------
-\subsection{References}
-
-List and number all bibliographical references in 9-point Times,
-single-spaced, at the end of your paper. When referenced in the text,
-enclose the citation number in square brackets, for
-example~\cite{Authors14}.  Where appropriate, include the name(s) of
-editors of referenced books.
-
-\begin{table}
-\begin{center}
-\begin{tabular}{|l|c|}
-\hline
-Method & Frobnability \\
-\hline\hline
-Theirs & Frumpy \\
-Yours & Frobbly \\
-Ours & Makes one's heart Frob\\
-\hline
-\end{tabular}
-\end{center}
-\caption{Results.   Ours is better.}
-\end{table}
-
-%-------------------------------------------------------------------------
-\subsection{Illustrations, graphs, and photographs}
-
-All graphics should be centered.  Please ensure that any point you wish to
-make is resolvable in a printed copy of the paper.  Resize fonts in figures
-to match the font in the body text, and choose line widths which render
-effectively in print.  Many readers (and reviewers), even of an electronic
-copy, will choose to print your paper in order to read it.  You cannot
-insist that they do otherwise, and therefore must not assume that they can
-zoom in to see tiny details on a graphic.
-
-When placing figures in \LaTeX, it's almost always best to use
-\verb+\includegraphics+, and to specify the  figure width as a multiple of
-the line width as in the example below
-{\small\begin{verbatim}
-   \usepackage[dvips]{graphicx} ...
-   \includegraphics[width=0.8\linewidth]
-                   {myfile.eps}
-\end{verbatim}
-}
+textbf{Regression:} The fully connected layers are used for nonlinear regression, we hope it can figure out the tradition way of triangulate and estimate distances. Different from many applications of using convolutional neural work to do classification, our network is doing regression job. It seems harder than classification, but we keep it in order to get more accurate gradient information from RMSE loss function rather than use a cross-entropy loss.
 
 
-%-------------------------------------------------------------------------
-\subsection{Color}
+At this stage, we choose a relatively simple architecture to verify our idea, since a simple architecture is easier to train and need less amount of data to overcome overfitting. We can increase the depth when we have more data and want to achieve a better accuracy. 
 
-Color is valuable, and will be visible to readers of the electronic copy.
-However ensure that, when printed on a monochrome printer, no important
-information is lost by the conversion to grayscale.
 
-%------------------------------------------------------------------------
-\section{Final copy}
+Training details:Our convolutional neural network is implemented in Tensorflow  with a GTX 960 GPU. The training data has 34K examples and the validation set Is 1.5K. We use Gradient Descent Optimizer with learning rate decay factor 0.1 every 10000 epochs. 
 
-You must include your signed IEEE copyright release form when you submit
-your finished paper. We MUST have this form before your paper can be
-published in the proceedings.
+\section{Results}
 
+
+\section{Conclusion}
+In this project we trained a neural network to learn how to extract depth information from images in order to determine if a cheap stereo camera can simulate the functionality of an 2D Lidar. With the experiments and results, we demonstrated that as more training data was fed in the network, the loss was decreasing, showing that the network is learning depth information from the given inputs and labels. However, from the figure of rmse of validation dataset, it is obvious that after the best score (1.79m), the model started overfitting. Possible explanations are that our training dataset is not large enough or the network is too complex. 
+
+\section{Future Work}
+
+In future work, we will first look at the issue of overfitting. Possible solutions are enlarge our training dataset and borrow other pre-trained CNNs and fine tune their architecture to fit our goal. Meanwhile, we will find a way to visualize the weights and outputs to see what we have learned to help us have a better understanding of the process. 
 
 {\small
 \bibliographystyle{ieee}
